ポケモン風カードゲームのオンライン対戦機能追加

--- a/public/style.css
+++ b/public/style.css
@@ -28,3 +28,7 @@ button:disabled {
   margin-right: 10px;
   margin-bottom: 5px;
 }
+#opponentBattleField {
+  margin-top: 20px;
+  font-weight: bold;
+}
